spacing fix

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -64,6 +64,8 @@
 }
 
 .newsletter {
+    margin-bottom: px2rem(20);
+
     .email, .submit {
         background-color: transparent;
         border-radius: px2rem(5);
@@ -114,13 +116,14 @@
     .newsletter {
         & > * {
             display: block;
-            margin: 0 auto px2rem(20);
+            margin: 0 auto;
             text-align: center;
             width: 80%;
         }
 
         .email {
             margin-right: auto;
+            margin-bottom: px2rem(20);
         }
     }
 }
